Change divs for semantic tags

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <div class="container">
+  <main class="container">
     <header>
       <h1 class="title">Join our community</h1>
       <p>30-day, hassle-free money back guarantee</p>
@@ -26,13 +26,14 @@
       </p>
     </header>
     <section class="price-container">
-      <div class="subcription">
+      <article class="subcription">
         <p class="sub-title">Monthly Subscription</p>
         <p><span>&dollar;29</span>  per month</p>
         <p>Full access for less than &dollar;1 a day</p>
         <button>Sign Up</button>
-      </div>
-      <div class="why-us">
+      </article>
+
+      <article class="why-us">
         <p class="sub-title">Why Us</p>
         <ul>
           <li>Tutorials by industry experts</li>
@@ -43,7 +44,7 @@
           <li>Flashcard decks</li>
           <li>New videos every week</li>
         </ul>
-      </div>
+      </article>
     </section>
     <footer>
       <p class="attribution">
@@ -51,6 +52,6 @@
         Coded by <a href="#">Your Name Here</a>.
       </p>
     </footer>
-  </div>
+  </main>
 </body>
 </html>
